--- a/devel/py-cachetools/Makefile
+++ b/devel/py-cachetools/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.20 2024/11/11 07:28:02 wiz Exp $
+# $NetBSD: Makefile,v 1.21 2025/01/30 08:25:49 adam Exp $
 
-DISTNAME=	cachetools-5.5.0
+DISTNAME=	cachetools-5.5.1
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	devel python
 MASTER_SITES=	${MASTER_SITE_PYPI:=c/cachetools/}
@@ -13,8 +13,6 @@ LICENSE=	mit
 TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools>=46.4.0:../../devel/py-setuptools
 
 USE_LANGUAGES=	# none
-
-PYTHON_VERSIONS_INCOMPATIBLE=	27
 
 .include "../../lang/python/wheel.mk"
 .include "../../mk/bsd.pkg.mk"
