--- a/lang/gleam/Makefile
+++ b/lang/gleam/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.19 2025/01/30 08:02:52 pin Exp $
+# $NetBSD: Makefile,v 1.20 2025/01/30 08:30:36 pin Exp $
 
 GITHUB_PROJECT=	gleam
 GITHUB_TAG=	v${PKGVERSION_NOREV}
@@ -11,6 +11,8 @@ MAINTAINER=	pkgsrc-users@NetBSD.org
 HOMEPAGE=	https://gleam.run/
 COMMENT=	ML-flavoured type-safe language using the BEAM runtime
 LICENSE=	apache-2.0
+
+# Requires at least Rust-1.82 for is_none_or feature.
 
 WRKSRC=		${WRKDIR}/gleam-${PKGVERSION_NOREV}
 
