--- a/devel/hs-data-default-instances-dlist/Makefile
+++ b/devel/hs-data-default-instances-dlist/Makefile
@@ -1,14 +1,16 @@
-# $NetBSD: Makefile,v 1.13 2024/05/09 01:31:51 pho Exp $
+# $NetBSD: Makefile,v 1.14 2025/01/30 08:53:56 pho Exp $
 
-DISTNAME=	data-default-instances-dlist-0.0.1
-PKGREVISION=	12
+DISTNAME=	data-default-instances-dlist-0.0.1.2
 CATEGORIES=	devel
 
 MAINTAINER=	szptvlfn@NetBSD.org
 COMMENT=	Default instances for types in dlist
 LICENSE=	modified-bsd
 
-.include "../../mk/haskell.mk"
+HASKELL_UNRESTRICT_DEPENDENCIES+=	\
+	data-default-class
+
 .include "../../devel/hs-data-default-class/buildlink3.mk"
 .include "../../devel/hs-dlist/buildlink3.mk"
+.include "../../mk/haskell.mk"
 .include "../../mk/bsd.pkg.mk"
