--- a/devel/hs-data-default-instances-old-locale/Makefile
+++ b/devel/hs-data-default-instances-old-locale/Makefile
@@ -1,14 +1,16 @@
-# $NetBSD: Makefile,v 1.10 2024/05/09 01:31:51 pho Exp $
+# $NetBSD: Makefile,v 1.11 2025/01/30 09:29:25 pho Exp $
 
-DISTNAME=	data-default-instances-old-locale-0.0.1
-PKGREVISION=	8
+DISTNAME=	data-default-instances-old-locale-0.0.1.2
 CATEGORIES=	devel
 
 MAINTAINER=	szptvlfn@NetBSD.org
 COMMENT=	Default instances for types in old-locale
 LICENSE=	modified-bsd
 
-.include "../../mk/haskell.mk"
+HASKELL_UNRESTRICT_DEPENDENCIES+=	\
+	data-default-class
+
 .include "../../devel/hs-data-default-class/buildlink3.mk"
 .include "../../devel/hs-old-locale/buildlink3.mk"
+.include "../../mk/haskell.mk"
 .include "../../mk/bsd.pkg.mk"
