--- a/audio/openal-soft/Makefile
+++ b/audio/openal-soft/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.42 2024/11/29 03:47:45 ryoon Exp $
+# $NetBSD: Makefile,v 1.43 2025/01/30 11:08:39 adam Exp $
 
-DISTNAME=	openal-soft-1.24.1
+DISTNAME=	openal-soft-1.24.2
 CATEGORIES=	audio
 MASTER_SITES=	https://openal-soft.org/openal-releases/
 EXTRACT_SUFX=	.tar.bz2
