--- a/net/hs-crypton-connection/Makefile
+++ b/net/hs-crypton-connection/Makefile
@@ -1,21 +1,20 @@
-# $NetBSD: Makefile,v 1.4 2024/05/09 01:32:29 pho Exp $
+# $NetBSD: Makefile,v 1.5 2025/01/30 11:20:42 pho Exp $
 
-DISTNAME=	crypton-connection-0.3.2
-PKGREVISION=	1
+DISTNAME=	crypton-connection-0.4.3
 CATEGORIES=	net
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
-COMMENT=	Simple and easy network connections API
+COMMENT=	Simple and easy network connection API
 LICENSE=	modified-bsd
 
 .include "../../devel/hs-basement/buildlink3.mk"
+.include "../../devel/hs-data-default/buildlink3.mk"
+.include "../../net/hs-network/buildlink3.mk"
+.include "../../security/hs-tls/buildlink3.mk"
+.include "../../net/hs-socks/buildlink3.mk"
 .include "../../security/hs-crypton-x509/buildlink3.mk"
 .include "../../security/hs-crypton-x509-store/buildlink3.mk"
 .include "../../security/hs-crypton-x509-system/buildlink3.mk"
 .include "../../security/hs-crypton-x509-validation/buildlink3.mk"
-.include "../../devel/hs-data-default-class/buildlink3.mk"
-.include "../../net/hs-network/buildlink3.mk"
-.include "../../net/hs-socks/buildlink3.mk"
-.include "../../security/hs-tls/buildlink3.mk"
 .include "../../mk/haskell.mk"
 .include "../../mk/bsd.pkg.mk"
