--- a/mail/evolution/Makefile
+++ b/mail/evolution/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.283 2024/12/27 08:20:15 wiz Exp $
+# $NetBSD: Makefile,v 1.284 2025/01/30 11:29:20 wiz Exp $
 
-DISTNAME=	evolution-3.34.1
-PKGREVISION=	36
+DISTNAME=	evolution-3.44.4
 CATEGORIES=	mail gnome
 MASTER_SITES=	${MASTER_SITE_GNOME:=sources/evolution/${PKGVERSION_NOREV:R}/}
 EXTRACT_SUFX=	.tar.xz
@@ -11,7 +10,6 @@ HOMEPAGE=	https://wiki.gnome.org/Apps/Evolution/
 COMMENT=	Mail and calendar client from GNOME
 LICENSE=	gnu-gpl-v2
 
-USE_CMAKE=	yes
 USE_TOOLS+=	pkg-config itstool
 USE_TOOLS+=	intltool msgfmt msgmerge xgettext
 USE_TOOLS+=	gdbus-codegen
@@ -33,22 +31,21 @@ PKGCONFIG_OVERRIDE+=	evolution-mail.pc.in
 PKGCONFIG_OVERRIDE+=	evolution-shell.pc.in
 PKGCONFIG_OVERRIDE+=	src/libemail-engine/libemail-engine.pc.in
 
-# "gettext version 0.18.3+ required, but version '0.16.1' found instead."
-_TOOLS_USE_PKGSRC.msgfmt=	yes
-_TOOLS_USE_PKGSRC.msgmerge=	yes
-_TOOLS_USE_PKGSRC.xgettext=	yes
-
+.include "../../devel/gettext-tools/msgfmt-desktop.mk"
+.include "../../devel/cmake/build.mk"
 .include "../../audio/libcanberra/buildlink3.mk"
 .include "../../databases/openldap-client/buildlink3.mk"
 .include "../../databases/shared-mime-info/buildlink3.mk"
 .include "../../devel/glib2/schemas.mk"
 .include "../../graphics/hicolor-icon-theme/buildlink3.mk"
+BUILDLINK_API_DEPENDS.evolution-data-server+=	evolution-data-server>=3.44
 .include "../../mail/evolution-data-server/buildlink3.mk"
 .include "../../mail/libytnef/buildlink3.mk"
 .include "../../security/gcr/buildlink3.mk"
 .include "../../sysutils/gsettings-desktop-schemas/buildlink3.mk"
 .include "../../sysutils/libnotify/buildlink3.mk"
 .include "../../sysutils/desktop-file-utils/desktopdb.mk"
+.include "../../textproc/cmark/buildlink3.mk"
 .include "../../textproc/gspell/buildlink3.mk"
 .include "../../www/webkit-gtk/buildlink3.mk"
 .include "../../x11/gtk3/buildlink3.mk"
