micropython: update to 1.24.1.
Fixes the build.

8 years of development, no summary found.

--- a/lang/micropython/Makefile
+++ b/lang/micropython/Makefile
@@ -1,50 +1,32 @@
-# $NetBSD: Makefile,v 1.10 2023/08/14 05:24:44 wiz Exp $
+# $NetBSD: Makefile,v 1.11 2025/01/30 12:01:27 wiz Exp $
 
-DISTNAME=	micropython-1.9.2
-PKGREVISION=	6
+DISTNAME=	micropython-1.24.1
 CATEGORIES=	lang
 MASTER_SITES=	http://micropython.org/resources/source/
 EXTRACT_SUFX=	.tar.xz
 
 MAINTAINER=	agc@NetBSD.org
 HOMEPAGE=	https://micropython.org/
-COMMENT=	Embedded version of python 3
+COMMENT=	Embedded version of Python 3
 LICENSE=	mit
 
-DIST_SUBDIR=	${PKGNAME_NOREV}
-BUILD_DIRS=	unix
+BUILD_DIRS=	mpy-cross ports/unix
+TEST_DIRS=	ports/unix
 
-USE_TOOLS+=	pax gmake pkg-config
+# as of 1.24.1
+# 899 tests performed (28325 individual testcases)
+# 656 tests passed
+# 79 tests skipped
+TEST_TARGET=	test
 
-AUTO_MKDIRS=	yes
+USE_TOOLS+=	gmake pkg-config
 
-PYTHON_VERSIONS_INCOMPATIBLE=	27
-PYTHON_FOR_BUILD_ONLY=		yes
-
-MAKE_ENV+=	PYTHON=${PYTHONBIN:Q}
-MAKE_ENV+=	MICROPY_CPYTHON3=${PYTHONBIN:Q}
-
-REPLACE_PYTHON+=	tools/make-frozen.py
-REPLACE_PYTHON+=	tests/run-tests
-
-SUBST_CLASSES+=			fix-paths
-SUBST_STAGE.fix-paths=		pre-configure
-SUBST_MESSAGE.fix-paths=	Fixing absolute paths.
-SUBST_FILES.fix-paths=		unix/main.c
-SUBST_SED.fix-paths=		-e 's,%PREFIX%,${PREFIX},g'
-
-pre-configure:
-	cd ${WRKSRC}/lib/axtls && ${GMAKE} clean
-
-pre-build:
-	cd ${WRKSRC}/unix && ${GMAKE} axtls
-
-do-test:
-	cd ${WRKSRC}/unix && env ${MAKE_ENV} ${GMAKE} test
+INSTALLATION_DIRS=	bin
 
 do-install:
-	${INSTALL_PROGRAM} ${WRKSRC}/unix/micropython ${DESTDIR}${PREFIX}/bin
+	${INSTALL_PROGRAM} ${WRKSRC}/ports/unix/build-standard/micropython ${DESTDIR}${PREFIX}/bin
 
 .include "../../devel/libffi/buildlink3.mk"
 .include "../../lang/python/application.mk"
+.include "../../lang/python/tool.mk"
 .include "../../mk/bsd.pkg.mk"
