--- a/textproc/py-colored/Makefile
+++ b/textproc/py-colored/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.12 2024/10/14 06:46:00 wiz Exp $
+# $NetBSD: Makefile,v 1.13 2025/01/30 12:12:09 adam Exp $
 
-DISTNAME=	colored-2.2.4
+DISTNAME=	colored-2.2.5
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	textproc python
 MASTER_SITES=	${MASTER_SITE_PYPI:=c/colored/}
