--- a/devel/py-codespell/Makefile
+++ b/devel/py-codespell/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.16 2025/01/22 08:30:49 adam Exp $
+# $NetBSD: Makefile,v 1.17 2025/01/30 12:14:26 adam Exp $
 
-DISTNAME=	codespell-2.4.0
+DISTNAME=	codespell-2.4.1
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	devel python
 MASTER_SITES=	${MASTER_SITE_PYPI:=c/codespell/}
@@ -10,6 +10,7 @@ HOMEPAGE=	https://github.com/codespell-project/codespell
 COMMENT=	Check code for common misspellings
 LICENSE=	gnu-gpl-v2
 
+TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools-[0-9]*:../../devel/py-setuptools
 TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools_scm>=6.2:../../devel/py-setuptools_scm
 TEST_DEPENDS+=	${PYPKGPREFIX}-test-cov-[0-9]*:../../devel/py-test-cov
 
