--- a/textproc/hs-skylighting-core/Makefile
+++ b/textproc/hs-skylighting-core/Makefile
@@ -1,12 +1,14 @@
-# $NetBSD: Makefile,v 1.17 2024/05/09 01:32:46 pho Exp $
+# $NetBSD: Makefile,v 1.18 2025/01/30 12:28:55 pho Exp $
 
-DISTNAME=	skylighting-core-0.14.1.1
-PKGREVISION=	1
+DISTNAME=	skylighting-core-0.14.6
 CATEGORIES=	textproc
 
 MAINTAINER=	pho@cielonegro.org
 COMMENT=	Syntax highlighting library core
 LICENSE=	modified-bsd
+
+HASKELL_UNRESTRICT_DEPENDENCIES+=	\
+	xml-conduit
 
 CONFIGURE_ARGS+=	-fexecutable
 
