--- a/textproc/hs-skylighting/Makefile
+++ b/textproc/hs-skylighting/Makefile
@@ -1,21 +1,21 @@
-# $NetBSD: Makefile,v 1.17 2024/05/09 01:32:46 pho Exp $
+# $NetBSD: Makefile,v 1.18 2025/01/30 12:44:44 pho Exp $
 
-DISTNAME=	skylighting-0.14.1.1
-PKGREVISION=	1
+DISTNAME=	skylighting-0.14.6
 CATEGORIES=	textproc
 
 MAINTAINER=	pho@cielonegro.org
 COMMENT=	Syntax highlighting library
 LICENSE=	gnu-gpl-v2
 
-CONFIGURE_ARGS+=	-f executable
+CONFIGURE_ARGS+=	-f +executable
 
 # lib:skylighting
 .include "../../textproc/hs-skylighting-core/buildlink3.mk"
 .include "../../textproc/hs-skylighting-format-ansi/buildlink3.mk"
-.include "../../textproc/hs-skylighting-format-blaze-html/buildlink3.mk"
 .include "../../textproc/hs-skylighting-format-context/buildlink3.mk"
 .include "../../textproc/hs-skylighting-format-latex/buildlink3.mk"
+.include "../../textproc/hs-skylighting-format-blaze-html/buildlink3.mk"
+.include "../../textproc/hs-skylighting-format-typst/buildlink3.mk"
 
 # exe:skylighting
 .include "../../textproc/hs-blaze-html/buildlink3.mk"
