--- a/devel/hs-ordered-containers/Makefile
+++ b/devel/hs-ordered-containers/Makefile
@@ -1,12 +1,12 @@
-# $NetBSD: Makefile,v 1.7 2024/05/09 01:32:06 pho Exp $
+# $NetBSD: Makefile,v 1.8 2025/01/30 13:00:49 pho Exp $
 
-DISTNAME=	ordered-containers-0.2.3
-PKGREVISION=	4
+DISTNAME=	ordered-containers-0.2.4
 CATEGORIES=	devel
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 COMMENT=	Set- and Map-like types that remember the order elements were inserted
 LICENSE=	modified-bsd
 
+.include "../../devel/hs-hashable/buildlink3.mk"
 .include "../../mk/haskell.mk"
 .include "../../mk/bsd.pkg.mk"
