--- a/textproc/hs-regex-tdfa/Makefile
+++ b/textproc/hs-regex-tdfa/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.14 2024/05/09 01:32:45 pho Exp $
+# $NetBSD: Makefile,v 1.15 2025/01/30 13:20:23 pho Exp $
 
 DISTNAME=	regex-tdfa-1.3.2.2
 PKGREVISION=	2
@@ -9,6 +9,7 @@ COMMENT=	Pure Haskell Tagged DFA Backend for "Text.Regex" (regex-base)
 LICENSE=	modified-bsd
 
 HASKELL_UNRESTRICT_DEPENDENCIES+=	\
+	containers	\
 	text
 
 .include "../../mk/haskell.mk"
