--- a/math/py-hmmlearn/Makefile
+++ b/math/py-hmmlearn/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.7 2024/11/11 07:28:41 wiz Exp $
+# $NetBSD: Makefile,v 1.8 2025/01/30 13:47:41 adam Exp $
 
-DISTNAME=	hmmlearn-0.3.2
+DISTNAME=	hmmlearn-0.3.3
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	math python
 MASTER_SITES=	${MASTER_SITE_PYPI:=h/hmmlearn/}
@@ -10,10 +10,10 @@ HOMEPAGE=	https://github.com/hmmlearn/hmmlearn
 COMMENT=	Algorithms for inference of Hidden Markov Models
 LICENSE=	modified-bsd
 
-TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools_scm-[0-9]*:../../devel/py-setuptools_scm
+TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools>=62:../../devel/py-setuptools
+TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools_scm>=6.2:../../devel/py-setuptools_scm
 DEPENDS+=	${PYPKGPREFIX}-scikit-learn>=0.16:../../math/py-scikit-learn
-DEPENDS+=	${PYPKGPREFIX}-matplotlib>0:../../graphics/py-matplotlib
-DEPENDS+=	${PYPKGPREFIX}-scipy>0.19:../../math/py-scipy
+DEPENDS+=	${PYPKGPREFIX}-scipy>=0.19:../../math/py-scipy
 TEST_DEPENDS+=	${PYPKGPREFIX}-test>=5.4.1:../../devel/py-test
 
 USE_LANGUAGES=	c c++
@@ -27,7 +27,7 @@ do-test:
 	cd ${WRKSRC} && ${SETENV} ${TEST_ENV} ${PYTHONBIN} setup.py develop
 	cd ${WRKSRC} && ${SETENV} ${TEST_ENV} pytest-${PYVERSSUFFIX} --capture=no
 
-.include "../../lang/python/wheel.mk"
 .include "../../devel/py-pybind11/buildlink3.mk"
+.include "../../lang/python/wheel.mk"
 .include "../../math/py-numpy/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
