--- a/lang/flang/Makefile
+++ b/lang/flang/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.10 2024/11/14 22:20:27 wiz Exp $
+# $NetBSD: Makefile,v 1.11 2025/01/30 14:45:46 wiz Exp $
 
 PKGREVISION= 3
 .include "../../lang/llvm/version.mk"
@@ -27,6 +27,8 @@ REPLACE_BASH=	tools/f18/flang-to-external-fc.in
 .include "../../mk/bsd.prefs.mk"
 .if ${OPSYS} == "Darwin"
 MAKE_ENV+=	DYLD_LIBRARY_PATH=${WRKSRC}/${CMAKE_BUILD_DIR}/lib
+.else
+MAKE_ENV+=	LD_LIBRARY_PATH=${WRKSRC}/${CMAKE_BUILD_DIR}/lib
 .endif
 
 .include "../../devel/cmake/build.mk"
