--- a/devel/hs-constraints/Makefile
+++ b/devel/hs-constraints/Makefile
@@ -1,15 +1,16 @@
-# $NetBSD: Makefile,v 1.8 2024/05/09 01:31:50 pho Exp $
+# $NetBSD: Makefile,v 1.9 2025/01/30 14:47:35 pho Exp $
 
-DISTNAME=	constraints-0.14
-PKGREVISION=	2
+DISTNAME=	constraints-0.14.2
 CATEGORIES=	devel
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 COMMENT=	Constraint manipulation
 LICENSE=	2-clause-bsd
 
+HASKELL_UNRESTRICT_DEPENDENCIES+=	\
+	hashable
+
 .include "../../devel/hs-boring/buildlink3.mk"
 .include "../../devel/hs-hashable/buildlink3.mk"
-.include "../../devel/hs-type-equality/buildlink3.mk"
 .include "../../mk/haskell.mk"
 .include "../../mk/bsd.pkg.mk"
