--- a/www/hs-http-media/Makefile
+++ b/www/hs-http-media/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.7 2024/05/09 01:32:53 pho Exp $
+# $NetBSD: Makefile,v 1.8 2025/01/30 14:53:37 pho Exp $
 
 DISTNAME=	http-media-0.8.1.1
 PKGREVISION=	2
@@ -9,7 +9,8 @@ COMMENT=	Processing HTTP Content-Type and Accept headers
 LICENSE=	mit
 
 HASKELL_UNRESTRICT_DEPENDENCIES=	\
-	bytestring
+	bytestring	\
+	containers
 
 .include "../../textproc/hs-case-insensitive/buildlink3.mk"
 .include "../../devel/hs-utf8-string/buildlink3.mk"
