--- a/ham/gnuradio-core/Makefile.common
+++ b/ham/gnuradio-core/Makefile.common
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile.common,v 1.53 2024/08/20 17:49:10 gdt Exp $
+# $NetBSD: Makefile.common,v 1.54 2025/01/30 15:41:15 wiz Exp $
 # This Makefile fragment is included in the package Makefiles for
 # GNU Radio distributed packages (they all share common configure and build
 # settings).
@@ -33,7 +33,7 @@ GITHUB_PROJECT=	gnuradio
 GITHUB_TAG=	v${VERSION}
 
 MAINTAINER?=	pkgsrc-users@NetBSD.org
-HOMEPAGE?=	https://www.gnu.org/software/gnuradio/
+HOMEPAGE?=	https://www.gnuradio.org/
 LICENSE=	gnu-gpl-v3
 
 USE_LANGUAGES=	c c++
