--- a/devel/hs-some/Makefile
+++ b/devel/hs-some/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.8 2024/05/09 01:32:12 pho Exp $
+# $NetBSD: Makefile,v 1.9 2025/01/30 15:46:07 pho Exp $
 
 DISTNAME=	some-1.0.6
 PKGREVISION=	2
@@ -7,6 +7,9 @@ CATEGORIES=	devel
 MAINTAINER=	pkgsrc-users@NetBSD.org
 COMMENT=	Existential type: Some
 LICENSE=	modified-bsd
+
+HASKELL_UNRESTRICT_DEPENDENCIES+=	\
+	base
 
 .include "../../devel/hs-base-orphans/buildlink3.mk"
 .include "../../mk/haskell.mk"
