--- a/www/hs-servant-server/Makefile
+++ b/www/hs-servant-server/Makefile
@@ -1,37 +1,27 @@
-# $NetBSD: Makefile,v 1.8 2024/05/09 01:32:55 pho Exp $
+# $NetBSD: Makefile,v 1.9 2025/01/30 16:44:29 pho Exp $
 
-DISTNAME=	servant-server-0.20
-PKGREVISION=	2
+DISTNAME=	servant-server-0.20.2
 CATEGORIES=	www
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 COMMENT=	Family of combinators for defining webservices APIs and serving them
 LICENSE=	modified-bsd
 
+# The package unconditionally builds and installs an example executable
+# which we don't want.
 HASKELL_DISABLE_EXECUTABLES+=	\
 	greet
 
-HASKELL_UNRESTRICT_DEPENDENCIES+=	\
-	base		\
-	bytestring	\
-	constraints	\
-	http-api-data	\
-	network		\
-	text
-
-.include "../../devel/hs-base-compat/buildlink3.mk"
-.include "../../converters/hs-base64-bytestring/buildlink3.mk"
 .include "../../devel/hs-constraints/buildlink3.mk"
 .include "../../www/hs-http-api-data/buildlink3.mk"
+.include "../../www/hs-servant/buildlink3.mk"
+.include "../../converters/hs-base64-bytestring/buildlink3.mk"
 .include "../../www/hs-http-media/buildlink3.mk"
 .include "../../www/hs-http-types/buildlink3.mk"
 .include "../../devel/hs-monad-control/buildlink3.mk"
 .include "../../net/hs-network/buildlink3.mk"
-.include "../../net/hs-network-uri/buildlink3.mk"
 .include "../../devel/hs-resourcet/buildlink3.mk"
-.include "../../www/hs-servant/buildlink3.mk"
 .include "../../devel/hs-sop-core/buildlink3.mk"
-.include "../../converters/hs-string-conversions/buildlink3.mk"
 .include "../../devel/hs-tagged/buildlink3.mk"
 .include "../../devel/hs-transformers-base/buildlink3.mk"
 .include "../../www/hs-wai/buildlink3.mk"
