--- a/graphics/py-OpenGL-accelerate/Makefile
+++ b/graphics/py-OpenGL-accelerate/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.12 2024/10/14 06:45:45 wiz Exp $
+# $NetBSD: Makefile,v 1.13 2025/01/30 20:26:52 wiz Exp $
 
 DISTNAME=	PyOpenGL-accelerate-3.1.7
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME:S/^Py//}
@@ -15,6 +15,9 @@ TOOL_DEPENDS+=	${PYPKGPREFIX}-cython-[0-9]*:../../devel/py-cython
 
 zz-pre-build:
 	cd ${WRKSRC}/src && for i in *.pyx; do cython-${PYVERSSUFFIX} $$i; done
+
+# https://sourceforge.net/p/pyopengl/mailman/message/58796603/
+BROKEN=		"Does not support py-numpy 2.x"
 
 .include "../../lang/python/egg.mk"
 .include "../../math/py-numpy/buildlink3.mk"
