--- a/mail/akonadi-mime/Makefile
+++ b/mail/akonadi-mime/Makefile
@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.12 2024/11/14 22:20:33 wiz Exp $
+# $NetBSD: Makefile,v 1.13 2025/01/30 23:19:27 wiz Exp $
 
 DISTNAME=	akonadi-mime-${KAPPSVER}
 PKGREVISION=	6
@@ -17,5 +17,6 @@ USE_TOOLS+=	msgmerge
 .include "../../devel/boost-headers/buildlink3.mk"
 .include "../../mail/akonadi/buildlink3.mk"
 .include "../../mail/kmime/buildlink3.mk"
+.include "../../textproc/libxslt/buildlink3.mk"
 .include "../../x11/qt5-qtbase/buildlink3.mk"
 .include "../../mk/bsd.pkg.mk"
