--- a/devel/cabal-fmt/Makefile
+++ b/devel/cabal-fmt/Makefile
@@ -1,9 +1,7 @@
-# $NetBSD: Makefile,v 1.7 2024/05/09 01:31:42 pho Exp $
+# $NetBSD: Makefile,v 1.8 2025/01/31 00:13:10 pho Exp $
 
-# NOTE: Cannot update to >=0.1.12 because the require GHC 10.
-DISTNAME=	cabal-fmt-0.1.11
+DISTNAME=	cabal-fmt-0.1.12
 PKGNAME=	${DISTNAME}
-PKGREVISION=	1
 CATEGORIES=	devel
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
@@ -11,8 +9,9 @@ COMMENT=	Format .cabal files
 LICENSE=	gnu-gpl-v3 AND modified-bsd
 
 HASKELL_UNRESTRICT_DEPENDENCIES+=	\
-	base		\
-	bytestring
+	base	\
+	containers	\
+	filepath
 
 .include "../../devel/hs-optparse-applicative/application.mk"
 .include "../../mk/haskell.mk"
