--- a/devel/hs-ghc-lib-parser/Makefile
+++ b/devel/hs-ghc-lib-parser/Makefile
@@ -1,11 +1,14 @@
-# $NetBSD: Makefile,v 1.11 2025/01/31 02:13:46 pho Exp $
+# $NetBSD: Makefile,v 1.12 2025/01/31 03:51:20 pho Exp $
 
-DISTNAME=	ghc-lib-parser-9.12.1.20250105
+DISTNAME=	ghc-lib-parser-9.10.1.20250103
 CATEGORIES=	devel
 
 MAINTAINER=	pkgsrc-users@NetBSD.org
 COMMENT=	The GHC API, decoupled from GHC versions
 LICENSE=	modified-bsd
+
+HASKELL_UNRESTRICT_DEPENDENCIES+=	\
+	alex
 
 USE_TOOLS+=	alex happy
 
