--- a/devel/hs-ghc-lib-parser-ex/Makefile
+++ b/devel/hs-ghc-lib-parser-ex/Makefile
@@ -1,13 +1,13 @@
-# $NetBSD: Makefile,v 1.13 2024/05/09 01:31:56 pho Exp $
+# $NetBSD: Makefile,v 1.14 2025/01/31 04:29:08 pho Exp $
 
-DISTNAME=	ghc-lib-parser-ex-9.8.0.2
-PKGREVISION=	1
+DISTNAME=	ghc-lib-parser-ex-9.10.0.0
 CATEGORIES=	devel
 
 MAINTAINER=	pho@cielonegro.org
-COMMENT=	Algorithms on GHC parse trees
+COMMENT=	Programming with GHC parse trees
 LICENSE=	modified-bsd
 
+.include "../../devel/hs-uniplate/buildlink3.mk"
 .include "../../devel/hs-ghc-lib-parser/buildlink3.mk"
 .include "../../devel/hs-uniplate/buildlink3.mk"
 .include "../../mk/haskell.mk"
