solarus: fix build
Add include for hicolor-icon-themes.

Bump PKGREVISION.

--- a/games/solarus/Makefile
+++ b/games/solarus/Makefile
@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.75 2024/11/14 22:19:58 wiz Exp $
+# $NetBSD: Makefile,v 1.76 2025/01/31 08:07:01 wiz Exp $
 
 VERSION=	1.6.5
 DISTNAME=	solarus-${VERSION}-src
 PKGNAME=	${DISTNAME:S/-src//1}
-PKGREVISION=	3
+PKGREVISION=	4
 CATEGORIES=	games
 MASTER_SITES=	${MASTER_SITE_GITLAB:=solarus-games/}
 GITLAB_PROJECT=	solarus
@@ -22,6 +22,9 @@ USE_LANGUAGES=	c c++
 LDFLAGS.SunOS+=	-lsocket -lnsl
 
 USE_CXX_FEATURES+=	c++11
+FORCE_CXX_STD=		c++11
+
+CXXFLAGS+=	-DGLM_ENABLE_EXPERIMENTAL
 
 .include "options.mk"
 .include "../../devel/cmake/build.mk"
@@ -37,6 +40,7 @@ BUILDLINK_API_DEPENDS.SDL2_image+=	SDL2_image>=2.0.0
 .include "../../graphics/SDL2_image/buildlink3.mk"
 BUILDLINK_API_DEPENDS.glm+=	glm>=1.0.0
 .include "../../graphics/glm/buildlink3.mk"
+.include "../../graphics/hicolor-icon-theme/buildlink3.mk"
 .include "../../multimedia/libogg/buildlink3.mk"
 .include "../../x11/qt5-qtbase/buildlink3.mk"
 .include "../../mk/pthread.buildlink3.mk"
