--- a/chat/finch/Makefile
+++ b/chat/finch/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.100 2024/11/14 22:18:50 wiz Exp $
+# $NetBSD: Makefile,v 1.101 2025/02/02 12:33:12 gdt Exp $
 
 PKGNAME=	finch-${PIDGIN_VERSION}
-PKGREVISION=	3
 #PKGREVISION=	0
 
 COMMENT=	Multi-protocol console instant messaging client
