--- a/chat/pidgin-sametime/Makefile
+++ b/chat/pidgin-sametime/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.76 2024/11/14 22:18:52 wiz Exp $
+# $NetBSD: Makefile,v 1.77 2025/02/02 12:33:12 gdt Exp $
 
 PKGNAME=	pidgin-sametime-${PIDGIN_VERSION}
-PKGREVISION=	3
 #PKGREVISION=	0
 
 COMMENT=	Lotus Sametime plugin for the Pidgin instant messenger
