--- a/chat/pidgin-silc/Makefile
+++ b/chat/pidgin-silc/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.79 2024/11/14 22:18:52 wiz Exp $
+# $NetBSD: Makefile,v 1.80 2025/02/02 12:33:12 gdt Exp $
 
 PKGNAME=	pidgin-silc-${PIDGIN_VERSION}
-PKGREVISION=	3
 #PKGREVISION=	0
 
 COMMENT=	SILC plugin for the Pidgin instant messenger
