net/tigervnc: Update to 1.14.1
From micha@ via wip.

- Switch to FLTK 1.4
- Remove pkgsrc patch that was merged upstream


The bugfix release TigerVNC 1.14.1 is now available. This release fixes a
number of regressions, the most prominent being:

- Default installation of native viewer can once again handle VncAuth
- Graphic acceleration now can now be disabled through the vncserver config
  file the same way as other features
- Command vncpasswd can again correctly update passwords
- Native viewer once again consider passwd file that contain more than one
  password valid
- Native viewer can once again connect to RealVNC servers
- Users of x0vncserver should no longer experience the mouse cursor moving
  to the upper left corner
- H264 encoding no longer causes crashing

--- a/net/tigervnc/patches/patch-unix_xserver_hw_vnc_Makefile.am
+++ b/net/tigervnc/patches/patch-unix_xserver_hw_vnc_Makefile.am
@@ -1,10 +1,10 @@
-$NetBSD: patch-unix_xserver_hw_vnc_Makefile.am,v 1.6 2024/08/27 07:31:13 wiz Exp $
+$NetBSD: patch-unix_xserver_hw_vnc_Makefile.am,v 1.7 2025/02/02 16:23:06 wiz Exp $
 
---- unix/xserver/hw/vnc/Makefile.am.orig	2024-07-23 08:50:25.000000000 +0000
+--- unix/xserver/hw/vnc/Makefile.am.orig	2024-10-22 13:45:27.000000000 +0000
 +++ unix/xserver/hw/vnc/Makefile.am
 @@ -14,6 +14,9 @@ AM_CPPFLAGS = \
  	-I$(TIGERVNC_SRCDIR)/unix/common \
- 	$(DIX_CFLAGS)
+ 	$(DIX_CFLAGS) $(LIBXCVT_CFLAGS)
  
 +# Hack to get the C headers to work when included from C++ code
 +AM_CXXFLAGS = -fpermissive
@@ -12,7 +12,7 @@ $NetBSD: patch-unix_xserver_hw_vnc_Makefile.am,v 1.6 2024/08/27 07:31:13 wiz Exp
  noinst_LTLIBRARIES = libvnccommon.la
  
  HDRS = vncExtInit.h vncHooks.h \
-@@ -78,6 +81,6 @@ libvnc_la_CPPFLAGS = $(AM_CPPFLAGS) \
+@@ -82,6 +85,6 @@ libvnc_la_CPPFLAGS = $(AM_CPPFLAGS) \
  
  libvnc_la_LDFLAGS = -module -avoid-version -Wl,-z,now
  
