xhost: update to 1.0.10.
Alan Coopersmith (9):
      gitlab CI: stop requiring Signed-off-by in commits
      Remove "All rights reserved" from Oracle copyright notices
      xhost.man: Use .BR markup for all references to other man pages
      user2netname expects a MAXNETNAMELEN + 1 buffer, so give it one
      Clear trailing whitespace from lines in files
      reduce scope of #ifdef'ed variables to reduce #ifdefs
      Simplify ifdefs for IPv6 support
      if getaddrinfo() is available, use it, even if IPv6 support is disabled
      xhost 1.0.10

Peter Hutterer (1):
      Replace inet_addr()/inet_aton() with a call to inet_pton()

--- a/x11/xhost/Makefile
+++ b/x11/xhost/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.17 2024/07/02 09:20:11 cheusov Exp $
+# $NetBSD: Makefile,v 1.18 2025/02/03 08:06:17 wiz Exp $
 
-DISTNAME=	xhost-1.0.9
+DISTNAME=	xhost-1.0.10
 CATEGORIES=	x11
 MASTER_SITES=	${MASTER_SITE_XORG:=app/}
 EXTRACT_SUFX=	.tar.xz
