py-mitmproxy_rs: updated to 0.11.4
06 January 2025: mitmproxy_rs 0.11.4

- Fix PyInstaller hooks to include `mitmproxy_linux`.

05 January 2025: mitmproxy_rs 0.11.3

- Fix CI to build wheels compatible with Python 3.13 for mitmproxy-linux.

03 January 2025: mitmproxy_rs 0.11.2

- Add local redirect mode for Linux.
- Update dependencies.

11 December 2024: mitmproxy_rs 0.11.1

- Update twine to fix the deploy CI.

10 December 2024: mitmproxy_rs 0.11.0

- Add `LocalRedirector.unavailable_reason()` and `TunInterface.unavailable_reason()`.
- Add `active_processes()` on Linux.

28 October 2024: mitmproxy_rs 0.10.7

- tun mode: disable rp_filter, remove debug logging.

28 October 2024: mitmproxy_rs 0.10.6

- tun mode: re-add debug logging.

27 October 2024: mitmproxy_rs 0.10.5

- tun mode: add default netmask

27 October 2024: mitmproxy_rs 0.10.4

- Remove superfluous debug logs.

27 October 2024: mitmproxy_rs 0.10.3

- Add more debug info.

27 October 2024: mitmproxy_rs 0.10.2

- Add debug info.

27 October 2024: mitmproxy_rs 0.10.1

- Assign a local IP address to our `tun` interface for Linux compatibility.

27 October 2024: mitmproxy_rs 0.10.0

- Add `tun` mode.

--- a/net/py-mitmproxy_rs/Makefile
+++ b/net/py-mitmproxy_rs/Makefile
@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.6 2024/12/29 22:34:36 leot Exp $
+# $NetBSD: Makefile,v 1.7 2025/02/04 12:10:02 adam Exp $
 
-DISTNAME=	mitmproxy_rs-0.5.2
+DISTNAME=	mitmproxy_rs-0.11.4
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
-PKGREVISION=	1
 CATEGORIES=	net python
 MASTER_SITES=	${MASTER_SITE_PYPI:=m/mitmproxy_rs/}
 
@@ -14,6 +13,12 @@ LICENSE=	mit
 MAKE_ENV+=	CARGO_NET_OFFLINE=true
 
 PYTHON_VERSIONS_INCOMPATIBLE=	39
+
+BORINGTUN_REV=	e3252d9c4f4c8fc628995330f45369effd4660a1
+DISTFILES=	${DEFAULT_DISTFILES}
+DISTFILES+=	boringtun-${BORINGTUN_REV}.tar.gz
+
+SITES.boringtun-${BORINGTUN_REV}.tar.gz=	-${MASTER_SITE_GITHUB:=cloudflare/}boringtun/archive/${BORINGTUN_REV}.tar.gz
 
 .include "cargo-depends.mk"
 
