curl: update to 8.12.0.
curl and libcurl 8.12.0

 Public curl releases:         264
 Command line options:         267
 curl_easy_setopt() options:   306
 Public functions in libcurl:  96
 Contributors:                 3332

This release includes the following changes:

 o curl: add byte range support to --variable reading from file [56]
 o curl: make --etag-save acknowledge --create-dirs [31]
 o getinfo: fix CURLINFO_QUEUE_TIME_T and add 'time_queue' var [55]
 o getinfo: provide info which auth was used for HTTP and proxy [40]
 o hyper: drop support [57]
 o openssl: add support to use keys and certificates from PKCS#11 provider [77]
 o QUIC: 0RTT for gnutls via CURLSSLOPT_EARLYDATA [61]
 o vtls: feature ssls-export for SSL session im-/export [141]

This release includes the following bugfixes:

 o altsvc: avoid integer overflow in expire calculation [16]
 o altsvc: return error on dot-only name [178]
 o android: add CI jobs, buildinfo, cmake docs, disable `CURL_USE_PKGCONFIG` by default [185]
 o asyn-ares: acknowledge CURLOPT_DNS_SERVERS set to NULL [190]
 o asyn-ares: fix memory leak [233]
 o asyn-ares: initial HTTPS resolve support [166]
 o asyn-thread: use c-ares to resolve HTTPS RR [205]
 o async-thread: avoid closing eventfd twice [9]
 o autotools: add support for mingw UWP builds [192]
 o autotools: silence gcc warnings in libtool code [96]
 o binmode: convert to macro and use it from tests [44]
 o build: delete `-Wsign-conversion` related FIXMEs [137]
 o build: drop `-Winline` picky warning [53]
 o build: drop `tool_hugehelp.c.cvs`, tidy up macros, drop `buildconf.bat` [200]
 o build: drop macro used to enable `-Wsign-conversion` warnings in CI [224]
 o build: drop unused feature macros, update exception list [51]
 o build: fix `-Wtrampolines` picky warning for gcc 4.x versions [156]
 o build: fix compiling with GCC 4.x versions [214]
 o build: fix the tidy targets for autotools [52]
 o build: fix unsigned `time_t` detection for cmake, MS-DOS, AmigaOS [104]


--- a/www/curl/patches/patch-curl-config.in
+++ b/www/curl/patches/patch-curl-config.in
@@ -1,18 +1,18 @@
-$NetBSD: patch-curl-config.in,v 1.13 2024/11/06 08:19:26 wiz Exp $
+$NetBSD: patch-curl-config.in,v 1.14 2025/02/05 08:51:32 wiz Exp $
 
 Make "curl-config --libs" return proper ldflags for shared libraries.
 
---- curl-config.in.orig	2024-11-06 07:09:19.000000000 +0000
+--- curl-config.in.orig	2025-02-05 08:05:05.000000000 +0000
 +++ curl-config.in
-@@ -161,9 +161,9 @@ while test "$#" -gt 0; do
-       CURLLIBDIR=''
+@@ -155,9 +155,9 @@ while test "$#" -gt 0; do
+       curllibdir=''
      fi
      if test 'X@ENABLE_SHARED@' = 'Xno'; then
--      echo "${CURLLIBDIR}-lcurl @LIBCURL_PC_LIBS_PRIVATE@"
-+      echo "@LDFLAGS@ ${CURLLIBDIR}-lcurl @LIBCURL_PC_LIBS_PRIVATE@"
+-      echo "${curllibdir}-lcurl @LIBCURL_PC_LIBS_PRIVATE@"
++      echo "@LDFLAGS@ ${curllibdir}-lcurl @LIBCURL_PC_LIBS_PRIVATE@"
      else
--      echo "${CURLLIBDIR}-lcurl"
-+      echo "@LDFLAGS@ ${CURLLIBDIR}-lcurl"
+-      echo "${curllibdir}-lcurl"
++      echo "@LDFLAGS@ ${curllibdir}-lcurl"
      fi
      ;;
  
