picard: updated to 2.13
Version 2.13 - 2025-02-04

Bugfixes
- Endless recursion when reading settings after script editor dialog was opened
- File naming options inaccessible on permission errors to target path
- Children's Music is shown as "Children'S Music" in Picard
- Picard requires charset-normalizer < 3.4.0
- Poorly formatted `date` tags crash Picard with uncaught Overflow Exception
- Wrong disc numbers when submitting release
- Case only renaming broken on case-insensitive filesystems
- Sorting on macOS does not sort empty values as expected

Tasks
- Update Windows code signing certificate
- Drop support for Python 3.7
- Support Python 3.13

Improvements
- Avoid manual copying of authentication token
- Support PKCE for OAuth2 authorization
- OAuth2: Implement token revocation on the server
- Add context menu action to metadata box to merge original and new values

--- a/audio/picard/Makefile
+++ b/audio/picard/Makefile
@@ -1,7 +1,6 @@
-# $NetBSD: Makefile,v 1.49 2023/08/14 05:23:48 wiz Exp $
+# $NetBSD: Makefile,v 1.50 2025/02/05 09:11:59 adam Exp $
 
-DISTNAME=	picard-2.3.2
-PKGREVISION=	4
+DISTNAME=	picard-2.13
 CATEGORIES=	audio python
 MASTER_SITES=	${MASTER_SITE_PYPI:=p/picard/}
 
@@ -10,15 +9,27 @@ HOMEPAGE=	https://picard.musicbrainz.org/
 COMMENT=	Audio file tagger
 LICENSE=	gnu-gpl-v2
 
-DEPENDS+=	${PYPKGPREFIX}-mutagen>=1.20:../../audio/py-mutagen
-DEPENDS+=	${PYPKGPREFIX}-qt5-[0-9]*:../../x11/py-qt5
+TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools>=62.4.0:../../devel/py-setuptools
+DEPENDS+=	${PYPKGPREFIX}-JWT>=2.0:../../textproc/py-JWT
+DEPENDS+=	${PYPKGPREFIX}-charset-normalizer>=3.3:../../converters/py-charset-normalizer
+DEPENDS+=	${PYPKGPREFIX}-dateutil>=2.7:../../time/py-dateutil
+DEPENDS+=	${PYPKGPREFIX}-discid>=1.0:../../audio/py-discid
+DEPENDS+=	${PYPKGPREFIX}-fasteners>=0.14:../../devel/py-fasteners
+DEPENDS+=	${PYPKGPREFIX}-markdown>=3.2:../../textproc/py-markdown
+DEPENDS+=	${PYPKGPREFIX}-mutagen>=1.37:../../audio/py-mutagen
+DEPENDS+=	${PYPKGPREFIX}-qt5>=5.11:../../x11/py-qt5
+DEPENDS+=	${PYPKGPREFIX}-yaml>=5.1:../../textproc/py-yaml
 
-PYTHON_VERSIONS_INCOMPATIBLE=	27 # py-mutagen
+.include "../../mk/bsd.prefs.mk"
+.if ${OPSYS} == "Darwin"
+DEPENDS+=	${PYPKGPREFIX}-pyobjc-core>=6.2:../../devel/py-pyobjc-core
+DEPENDS+=	${PYPKGPREFIX}-pyobjc-framework-Cocoa>=6.2:../../devel/py-pyobjc-framework-Cocoa
+.endif
 
 USE_LANGUAGES=	c c++
 USE_TOOLS+=	msgfmt pkg-config
 
 .include "../../graphics/hicolor-icon-theme/buildlink3.mk"
-.include "../../lang/python/egg.mk"
+.include "../../lang/python/wheel.mk"
 .include "../../sysutils/desktop-file-utils/desktopdb.mk"
 .include "../../mk/bsd.pkg.mk"
