py-dateparser: updated to 1.2.1
1.2.1 (2025-02-05)

Fixes:

- Fix PytzUsageWarning
- Fix date_parser with prefer_month_of_year wrong results
- Fix skipped day when UTC and tz are different days

Improvements:

- Avoid repeated loop over timezones
- Proofread README.rst
- Check for derived types for configuration
- Parse some abbreviated strings as relative dates
- Migrate from hijri-converter to hijridate
- Fixed ClusterFuzz build error by adding dateparser.data as a binary
- Fix an issue detected by OSSFuzz
- Support two-digit years in non-Gregorian calendars
- Refactored CI to run extras separately and test minimum versions of dependencies, replaced flake8 with ruff, fixed tests
- Set minimum versions for dependencies
- Limited ``numpy`` to 1.x when installing ``dateparser[fasttext]``

--- a/time/py-dateparser/Makefile
+++ b/time/py-dateparser/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.16 2023/11/17 20:48:06 adam Exp $
+# $NetBSD: Makefile,v 1.17 2025/02/05 16:22:31 adam Exp $
 
-DISTNAME=	dateparser-1.2.0
+DISTNAME=	dateparser-1.2.1
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	time python
 MASTER_SITES=	${MASTER_SITE_PYPI:=d/dateparser/}
@@ -10,10 +10,11 @@ HOMEPAGE=	https://github.com/scrapinghub/dateparser
 COMMENT=	Date parsing library designed to parse dates from HTML pages
 LICENSE=	modified-bsd
 
-DEPENDS+=	${PYPKGPREFIX}-dateutil-[0-9]*:../../time/py-dateutil
-DEPENDS+=	${PYPKGPREFIX}-pytz-[0-9]*:../../time/py-pytz
+TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools-[0-9]*:../../devel/py-setuptools
+DEPENDS+=	${PYPKGPREFIX}-dateutil>=2.7.0:../../time/py-dateutil
+DEPENDS+=	${PYPKGPREFIX}-pytz>=2024.2:../../time/py-pytz
 DEPENDS+=	${PYPKGPREFIX}-regex>2021.8.27:../../textproc/py-regex
-DEPENDS+=	${PYPKGPREFIX}-tzlocal-[0-9]*:../../time/py-tzlocal
+DEPENDS+=	${PYPKGPREFIX}-tzlocal>=0.2:../../time/py-tzlocal
 TEST_DEPENDS+=	${PYPKGPREFIX}-flake8-[0-9]*:../../devel/py-flake8
 TEST_DEPENDS+=	${PYPKGPREFIX}-parameterized-[0-9]*:../../devel/py-parameterized
 TEST_DEPENDS+=	${PYPKGPREFIX}-test-[0-9]*:../../devel/py-test
@@ -21,11 +22,9 @@ TEST_DEPENDS+=	${PYPKGPREFIX}-test-cov-[0-9]*:../../devel/py-test-cov
 
 USE_LANGUAGES=	# none
 
-PYTHON_VERSIONS_INCOMPATIBLE=	27
-
 post-install:
 	cd ${DESTDIR}${PREFIX}/bin && \
 	${MV} dateparser-download dateparser-download-${PYVERSSUFFIX} || ${TRUE}
 
-.include "../../lang/python/egg.mk"
+.include "../../lang/python/wheel.mk"
 .include "../../mk/bsd.pkg.mk"
