py-lupa: updated to 2.4
2.4 (2025-01-10)

* The windows wheels now bundle LuaJIT 2.0 and 2.1.
  (patch by Michal Plichta)
* Failures in the test suite didn't set a non-zero process exit value.


2.3 (2025-01-09)

* The bundled LuaJIT versions were updated to the latest git branches.
* The bundled Lua 5.4 was updated to 5.4.7.
* Removed support for Python 2.x.
* Built with Cython 3.0.11.

--- a/devel/py-lupa/Makefile
+++ b/devel/py-lupa/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.15 2024/11/11 07:28:15 wiz Exp $
+# $NetBSD: Makefile,v 1.16 2025/02/05 20:44:18 adam Exp $
 
-DISTNAME=	lupa-2.2
+DISTNAME=	lupa-2.4
 PKGNAME=	${PYPKGPREFIX}-${DISTNAME}
 CATEGORIES=	devel python
 MASTER_SITES=	${MASTER_SITE_PYPI:=l/lupa/}
@@ -10,12 +10,10 @@ HOMEPAGE=	https://github.com/scoder/lupa
 COMMENT=	Python wrapper around Lua and LuaJIT
 LICENSE=	mit
 
-TOOL_DEPENDS+=	${PYPKGPREFIX}-cython>=3.0.9:../../devel/py-cython
+TOOL_DEPENDS+=	${PYPKGPREFIX}-cython>=3.0.11:../../devel/py-cython
 TOOL_DEPENDS+=	${PYPKGPREFIX}-setuptools-[0-9]*:../../devel/py-setuptools
 
 USE_TOOLS+=	pkg-config
-
-PYTHON_VERSIONS_INCOMPATIBLE=	27
 
 .include "options.mk"
 
