neovim: updated to 0.10.4
0.10.4

This is maintenance release, focusing on bug fixes. It also contains changes
to the available binary releases.

A Linux AArch64 binary has been added as part of the binary releases.
In addition, the previous "linux64" binary has been renamed to "linux-x86_64".
This is a BREAKING change for scripts which consumes our binary releases.

Bug Fixes

checkhealth: Failed if 'lua' in plugin name
decor: Set invalid flag for end of invalidated paired marks
inspect: Use correct default highlight
jobs: Do not block UI when jobwait() doesn't block
lsp: Minimum height for floating popup
lua: Prevent SIGSEGV when lua error is NULL in libuv_worker
marks: Revise metadata for start mark of revalidated pair
mpack: Remove invalid bool definition
runtime: Let matchit and matchparen skips fallback on treesitter captures
search: Avoid quadratic time complexity when computing fuzzy score
treesitter: Uv_dlclose after uv_dlerror
treesitter: Don't open fold when o/O adds a line below
treesitter.foldexpr: Robustness against ctrl-c
treesitter.foldexpr: Refresh in the buffers affected by OptionSet
treesitter.foldexpr: Only refresh valid buffers
ui: Ensure screen update before waiting for input

--- a/editors/neovim/Makefile
+++ b/editors/neovim/Makefile
@@ -1,6 +1,6 @@
-# $NetBSD: Makefile,v 1.12 2025/01/24 12:45:54 riastradh Exp $
+# $NetBSD: Makefile,v 1.13 2025/02/07 07:50:02 adam Exp $
 
-DISTNAME=	neovim-0.10.3
+DISTNAME=	neovim-0.10.4
 CATEGORIES=	editors
 MASTER_SITES=	${MASTER_SITE_GITHUB:=neovim/}
 GITHUB_TAG=	v${PKGVERSION_NOREV}
@@ -11,7 +11,6 @@ COMMENT=	Vim fork focused on extensibility and usability
 LICENSE=	apache-2.0 AND vim-license
 
 USE_LANGUAGES=	c c++
-
 USE_TOOLS+=	pkg-config gettext
 
 .include "../../mk/bsd.prefs.mk"
